--- a/my-app/package.json
+++ b/my-app/package.json
@@ -17,6 +17,9 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "react-text-transition": "^3.1.0",
+    "react-typed": "^2.0.12",
+    "reactjs-popup": "^2.0.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
